crates/rs_html_parser/tests/snapshots/html5lib_test3_test__tests__lt_excl_mark_doctype_a_system_apos1_apos1_u000d.snap
---
source: crates/rs_html_parser/tests/html5lib_test3_test.rs
expression: "parser_test(r####\"<!DOCTYPE a SYSTEM''\n\"####)"
---
[
    Token {
        data: "DOCTYPE a SYSTEM''\n",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
]
